@@ -1,5 +1,37 @@
 # Runtime Environment — Lessons
 
+## What is in this section
+
+```text
+  Dedicated module plus ten numbered lessons across four topic groups.
+
+  ┌─── dedicated module ──────────────────────────────────────────────────────┐
+  │  runtime_labs.md — container from scratch, OCI image, systemd unit       │
+  └───────────────────────────────────────────────────────────────────────────┘
+
+  ┌─── observability & profiling  (1–3) ──────────────────────────────────────┐
+  │  1 GC observed (JVM -Xlog:gc*, CPython gc.set_debug, V8 --trace-gc)      │
+  │  2 JIT warm-up — measure tiered compilation effects                      │
+  │  3 profile a runtime (async-profiler, py-spy, 0x, pprof)                 │
+  └───────────────────────────────────────────────────────────────────────────┘
+
+  ┌─── interop & threading models  (4–5) ─────────────────────────────────────┐
+  │  4 native interop — JNI, P/Invoke, Python ctypes, Go cgo                 │
+  │  5 threading models — JVM threads, GIL + asyncio, V8 + workers, BEAM    │
+  └───────────────────────────────────────────────────────────────────────────┘
+
+  ┌─── containers & orchestration  (6–8) ─────────────────────────────────────┐
+  │  6 container 101 — build image, push registry, run via runc / Docker     │
+  │  7 Kubernetes basics — deployment, service, ingress, logs                │
+  │  8 init container & sidecar pattern                                       │
+  └───────────────────────────────────────────────────────────────────────────┘
+
+  ┌─── WebAssembly & embedding  (9–10) ───────────────────────────────────────┐
+  │  9 Wasm sandbox — compile Rust → wasm32-wasip1; run under wasmtime       │
+  │  10 embed a runtime — V8 in C++, or wasmtime in Rust                     │
+  └───────────────────────────────────────────────────────────────────────────┘
+```
+
 ## Dedicated lesson modules
 
 | Topic | File |
